Allow interpolation of background-size values with keywords in CSS Animations

This change allows for positionally matched keywords in background-size CSS
Animations. This brings it in line with CSS Transitions behaviour.

Previously CSSSizeListInterpolationType inherited from CSSLengthListInterpolationType,
due to the handling of keywords this is no longer suitable.

BUG=640450

Review-Url: https://codereview.chromium.org/2280553002
Cr-Commit-Position: refs/heads/master@{#417134}