third_party/WebKit/Source/core/animation/LengthListPropertyFunctions.cpp
@@ -16,11 +16,9 @@ const FillLayer* getFillLayer(CSSPropertyID property, const ComputedStyle& style
     switch (property) {
     case CSSPropertyBackgroundPositionX:
     case CSSPropertyBackgroundPositionY:
-    case CSSPropertyBackgroundSize:
         return &style.backgroundLayers();
     case CSSPropertyWebkitMaskPositionX:
     case CSSPropertyWebkitMaskPositionY:
-    case CSSPropertyWebkitMaskSize:
         return &style.maskLayers();
     default:
         NOTREACHED();
@@ -33,11 +31,9 @@ FillLayer* accessFillLayer(CSSPropertyID property, ComputedStyle& style)
     switch (property) {
     case CSSPropertyBackgroundPositionX:
     case CSSPropertyBackgroundPositionY:
-    case CSSPropertyBackgroundSize:
         return &style.accessBackgroundLayers();
     case CSSPropertyWebkitMaskPositionX:
     case CSSPropertyWebkitMaskPositionY:
-    case CSSPropertyWebkitMaskSize:
         return &style.accessMaskLayers();
     default:
         NOTREACHED();
@@ -51,8 +47,6 @@ struct FillLayerMethods {
         isSet = nullptr;
         getLength = nullptr;
         setLength = nullptr;
-        getFillSize = nullptr;
-        setFillSize = nullptr;
         clear = nullptr;
         switch (property) {
         case CSSPropertyBackgroundPositionX:
@@ -69,13 +63,6 @@ struct FillLayerMethods {
             setLength = &FillLayer::setYPosition;
             clear = &FillLayer::clearYPosition;
             break;
-        case CSSPropertyBackgroundSize:
-        case CSSPropertyWebkitMaskSize:
-            isSet = &FillLayer::isSizeSet;
-            getFillSize = &FillLayer::size;
-            setFillSize = &FillLayer::setSize;
-            clear = &FillLayer::clearSize;
-            break;
         default:
             NOTREACHED();
             break;
@@ -85,8 +72,6 @@ struct FillLayerMethods {
     bool (FillLayer::*isSet)() const;
     const Length& (FillLayer::*getLength)() const;
     void (FillLayer::*setLength)(const Length&);
-    FillSize (FillLayer::*getFillSize)() const;
-    void (FillLayer::*setFillSize)(const FillSize&);
     void (FillLayer::*clear)();
 };
 
@@ -104,13 +89,11 @@ ValueRange LengthListPropertyFunctions::getValueRange(CSSPropertyID property)
     case CSSPropertyWebkitMaskPositionY:
         return ValueRangeAll;
 
-    case CSSPropertyBackgroundSize:
     case CSSPropertyBorderBottomLeftRadius:
     case CSSPropertyBorderBottomRightRadius:
     case CSSPropertyBorderTopLeftRadius:
     case CSSPropertyBorderTopRightRadius:
     case CSSPropertyStrokeDasharray:
-    case CSSPropertyWebkitMaskSize:
         return ValueRangeNonNegative;
 
     default:
@@ -184,22 +167,6 @@ bool LengthListPropertyFunctions::getLengthList(CSSPropertyID property, const Co
         }
         return true;
     }
-    case CSSPropertyBackgroundSize:
-    case CSSPropertyWebkitMaskSize: {
-        const FillLayer* fillLayer = getFillLayer(property, style);
-        FillLayerMethods fillLayerMethods(property);
-        while (fillLayer && (fillLayer->*fillLayerMethods.isSet)()) {
-            FillSize fillSize = (fillLayer->*fillLayerMethods.getFillSize)();
-            if (fillSize.type != SizeLength) {
-                result.clear();
-                return false;
-            }
-            result.append(fillSize.size.width());
-            result.append(fillSize.size.height());
-            fillLayer = fillLayer->next();
-        }
-        return true;
-    }
 
     default:
         NOTREACHED();
@@ -267,27 +234,6 @@ void LengthListPropertyFunctions::setLengthList(CSSPropertyID property, Computed
             if (!fillLayer)
                 fillLayer = prev->ensureNext();
             (fillLayer->*fillLayerMethods.setLength)(lengthList[i]);
-            prev = fillLayer;
-            fillLayer = fillLayer->next();
-        }
-        while (fillLayer) {
-            (fillLayer->*fillLayerMethods.clear)();
-            fillLayer = fillLayer->next();
-        }
-        return;
-    }
-
-    case CSSPropertyBackgroundSize:
-    case CSSPropertyWebkitMaskSize: {
-        DCHECK_EQ(lengthList.size() % 2, 0U);
-        FillLayer* fillLayer = accessFillLayer(property, style);
-        FillLayer* prev = nullptr;
-        FillLayerMethods fillLayerMethods(property);
-        for (size_t i = 0; i < lengthList.size() / 2; i++) {
-            if (!fillLayer)
-                fillLayer = prev->ensureNext();
-            FillSize fillSize(SizeLength, LengthSize(lengthList[2 * i], lengthList[2 * i + 1]));
-            (fillLayer->*fillLayerMethods.setFillSize)(fillSize);
             prev = fillLayer;
             fillLayer = fillLayer->next();
         }
