third_party/WebKit/Source/core/animation/SizeListPropertyFunctions.h
@@ -1,0 +1,29 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+// Copyright 2016 The Chromium Authors. All rights reserved.
+// Use of this source code is governed by a BSD-style license that can be
+// found in the LICENSE file.
+
+#ifndef SizeListPropertyFunctions_h
+#define SizeListPropertyFunctions_h
+
+#include "core/CSSPropertyNames.h"
+#include "core/style/FillLayer.h"
+#include "wtf/Vector.h"
+
+namespace blink {
+
+class ComputedStyle;
+
+using SizeList = Vector<FillSize, 1>;
+
+class SizeListPropertyFunctions {
+    STATIC_ONLY(SizeListPropertyFunctions);
+public:
+    static SizeList getInitialSizeList(CSSPropertyID);
+    static SizeList getSizeList(CSSPropertyID, const ComputedStyle&);
+    static void setSizeList(CSSPropertyID, ComputedStyle&, const SizeList&);
+};
+
+} // namespace blink
+
+#endif // SizeListPropertyFunctions_h
