third_party/WebKit/Source/core/style/FillLayer.h
@@ -38,7 +38,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace blink {
 
 struct FillSize {
-    STACK_ALLOCATED();
+    DISALLOW_NEW_EXCEPT_PLACEMENT_NEW();
     FillSize()
         : type(SizeLength)
     {
